--- a/index.qmd
+++ b/index.qmd
@@ -14,9 +14,9 @@ page-layout: full
 title-block-banner: true
 ---
 
-This is the home page, where the stock posts should be displayed.
+Look for articles that might interest you
 
-#### Stock analysis listed here:
+#### My travel sorted descending per year:
 
 ::: {#sample-listings}
 :::
