--- a/index.qmd
+++ b/index.qmd
@@ -10,6 +10,7 @@ listing:
   categories: false
   sort-ui: false
   filter-ui: false
+  date-format: "3YYYY"
 page-layout: full
 title-block-banner: true
 ---
