--- a/posts/Mallorcakid/mallorcakid.qmd
+++ b/posts/Mallorcakid/mallorcakid.qmd
@@ -2,7 +2,7 @@
 title: "Mallorca"
 description: "Child trip to Mallorca"
 author: "JNW"
-date: "2008-08-02"
+date: "2008"
 image: Mallorca1.png
 ---
 
@@ -10,4 +10,4 @@ image: Mallorca1.png
 
 As a kid, I was once in Mallorca. I do not have much memory about it.
 
-![Mallorca](Mallorca2.png){fig-alt="A drawing of an elephant." fig-align="left" width=20%}
+![Mallorca](Mallorca2.png){fig-alt="A drawing of an elephant." fig-align="left" width="20%"}
