--- a/posts/2021_PT2/PT2.qmd
+++ b/posts/2021_PT2/PT2.qmd
@@ -13,15 +13,6 @@ Penedo Part:
 
 ![Penedo Water park](Penedo_fun1.JPG)
 
-
-
-
-
-
 Peniche Part:
 
-![Peniche Superturbedo beach](Peniche_beach1.jpg)
-![Peniche Side Beach](Peniche_beach2.jpg)
-![Peniche House art](Peniche_house.jpg)
-![Breakfast in Peniche](breakfast_peniche.jpg)
-![Peniche Superturbedo beach](Peniche_beach1.jpg)
+![Peniche Superturbedo beach](Peniche_beach1.jpg) ![Peniche Side Beach](Peniche_beach2.jpg) ![Peniche House art](Peniche_house.jpg) ![Breakfast in Peniche](breakfast_peniche.jpg) ![Peniche Superturbedo beach](Peniche_beach1.jpg)
