update new section

--- a/posts/2023_Colmar_bike/2023_12_26_Colmar.qmd
+++ b/posts/2023_Colmar_bike/2023_12_26_Colmar.qmd
@@ -11,7 +11,7 @@ format: html
 
 Based on calculations from Google, one way is roughly 46km. This was my planned route:
 
-![Colmar on Google Maps](Colmar_trip.PNG) 
+![Colmar on Google Maps](Colmar_trip.PNG)
 
 I started by waking up at 6.30 in the morning by having a beautiful oatmeal breakfast with protein powder, nuts and some coconut powder followed by a small coffee to make me poop. All worked out!
 
@@ -19,21 +19,13 @@ First stop: Tuniberg
 
 ![Tuniberg](Tuniberg.JPG "A morning in Tuniberg"){fig-alt="Tuniberg"}
 
-Second stop: The border France-Germany
-![Rhein border in Breisach](Rhein.JPG)
+Second stop: The border France-Germany ![Rhein border in Breisach](Rhein.JPG)
 
-Interesting feature on French fields: Open silos
-![Silos](Silo.JPG)
+Interesting feature on French fields: Open silos ![Silos](Silo.JPG)
 
 The arrival in Colmar: christmas market
 
-![Colmar Christmas market vibes](Colmar1.JPG)
-![Colmar Christmas market vibes](Colmar2.JPG)
-![Colmar Christmas market vibes](Colmar3.JPG)
-![Colmar Christmas market vibes](Colmar4.JPG)
-![Colmar Christmas market vibes](Colmar5.JPG)
-![Colmar Christmas market vibes](Colmar6.JPG)
-![Colmar Christmas market vibes](Colmar7.JPG)
+![Colmar Christmas market vibes](Colmar1.JPG) ![Colmar Christmas market vibes](Colmar2.JPG) ![Colmar Christmas market vibes](Colmar3.JPG) ![Colmar Christmas market vibes](Colmar4.JPG) ![Colmar Christmas market vibes](Colmar5.JPG) ![Colmar Christmas market vibes](Colmar6.JPG) ![Colmar Christmas market vibes](Colmar7.JPG)
 
 On the way back: A flat tire and goats laughing about me:
 
