--- a/posts/2023_Ibiza/2023_Ibiza.qmd
+++ b/posts/2023_Ibiza/2023_Ibiza.qmd
@@ -14,21 +14,6 @@ image: Ibiza1.png
 #| include: false
 #| warning: false
 
-#install.packages("ggthemes")
-library(ggmap)
-library(maps)
-library(ggthemes)
-library(tibble)
-
-
-df_places <- tibble(
-  place = c("Sant Antoni de Portmany",
-               "Aeroport Eivissa",
-               "Eivissa Port"),
-  long = c(1.30247, 1.36696, 1.43792),
-  lat = c(38.98248, 38.87766, 38.91489)
-  )
- 
 
 ```
 
@@ -37,19 +22,19 @@ df_places <- tibble(
 #| output: false
 #| include: false
 #| warning: false
-#ibiza_map <- ggmap::get_stamenmap(
- #bbox = c(left = 0.97, bottom = 38.75, right = 1.86, top = 39.1865)
-#)
+
 
 ```
 
 ```{r}
 #| echo: false
 #| warning: false
-#ggmap::ggmap(ibiza_map) + 
-  #geom_point(data = df_places,
-             #aes(x= long, y = lat),
-             #size = 2.3)+
-             #theme_map()
+
 
 ```
+
+![](bluewater1.jpg)
+
+![](cala1.jpg)
+
+![](CalaSalada1.jpg)
