--- a/posts/2023_Ibiza/2023_Ibiza.qmd
+++ b/posts/2023_Ibiza/2023_Ibiza.qmd
@@ -38,3 +38,13 @@ image: Ibiza1.png
 ![](cala1.jpg)
 
 ![](CalaSalada1.jpg)
+
+![](ibiza_sunset.jpg)
+
+![](Ibiza1.PNG)
+
+![](PlatjadeCalaXarraca1.jpg)
+
+![](PlatjadeCalaXarraca2.jpg)
+
+![](rocks1.jpg)
